changed to Arraylist
2 times better performance